--- a/BountyHunter/Info.plist
+++ b/BountyHunter/Info.plist
@@ -2,6 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.605187394512-qs5su8ndk64lqgc3p8jinpdpe0vhhugl</string>
+			</array>
+		</dict>
+	</array>
+	<key>GIDClientID</key>
+	<string>605187394512-qs5su8ndk64lqgc3p8jinpdpe0vhhugl.apps.googleusercontent.com</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
